<resources>
    <string name="app_name">Nyobora</string>
    <string name="locsel">Location Selected</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="locSel">Location Selected</string>
    <string name="peo">People</string>
    <string name="lang">Language</string>
    <string name="nyobora">Nyobora</string>
    <string name="weather">Weather</string>
    <string name="topthingstodo">Top Things to Do</string>
    <string name="forum">Forum</string>
    <string name="peopleArea">People in the Area</string>
    <string name="profile">Your Profile</string>
    <string name="category">Categories</string>
    <string name="thingstodo">Things To Do</string>
    <string name="loc">Locations</string>
    <string name="inter">Interests</string>
    <string name="connect">Connect with Others</string>
    <string name="outdoors">Outdoors</string>
    <string name="animals">Animals</string>
    <string name="art">Art</string>
    <string name="museum">Museums</string>
    <string name="food">Food</string>
    <string name="technology">Technology</string>
    <string name="settings">Settings</string>
    <string name="savedInfo">Saved Information</string>
    <string name="upload">Upload a Picture</string>
    <string name="locationField">Location:</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="typeoflang">Type of Language</string>
    <string name="name">Name</string>
    <string name="ageField">Age:</string>
    <string name="descriptionField">Description:</string>
    <string name="save">Save</string>
    <string name="person1">Person1</string>
    <string name="person2">Person2</string>
    <string name="person3">Person3</string>
    <string name="changelang">Change Your Language</string>
    <string name="categoryoflang">Category of Language</string>
    <string name="savedThingsToDo">Your Things To Do</string>
    <string name="title">Title</string>
    <string name="phoneField">Phone Number:</string>
    <string name="savedlang">Saved Language</string>
    <string name="selectlang">Selected Language</string>
    <string name="notifications">Notifications</string>
    <string name="nameInput">Name:</string>
    <string name="post">Post to the Forum</string>
    <string name="takePic">Take a Picture</string>
    <string-array name="langlist">
        <item>EN</item>
        <item>ES</item>
        <item>FR</item>
    </string-array>
    <string-array name="locationlist">
        <item>Kigali,Rwanda</item>
        <item>Pittsburgh,PA</item>
        <item>Kampala,Uganda</item>
    </string-array>
    <string name="contact">Contact</string>
</resources>
