<?xml version="1.0" encoding="utf-8" ?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.school.ecallowa.nyobora.customscreens.Settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loc"
        android:id="@+id/title"
        android:layout_below="@+id/textView8"
        android:layout_alignRight="@+id/saveButton"
        android:layout_alignEnd="@+id/saveButton" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/locationList"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inter"
        android:id="@+id/textView6"
        android:layout_below="@+id/locationList"
        android:layout_centerHorizontal="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connectButton"
        android:checked="false"
        android:layout_alignLeft="@+id/museumCheckBox"
        android:layout_alignStart="@+id/museumCheckBox"
        android:layout_below="@+id/artCheckBox" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" android:id="@+id/saveButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outdoors"
        android:id="@+id/outdoorsCheckBox"
        android:checked="false"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animals"
        android:id="@+id/animalsCheckBox"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_below="@+id/outdoorsCheckBox"
        android:layout_alignParentLeft="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/art"
        android:id="@+id/artCheckBox"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_below="@+id/animalsCheckBox"
        android:layout_alignParentLeft="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/museum"
        android:id="@+id/museumCheckBox"
        android:checked="false"
        android:layout_below="@+id/technologyCheckBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:id="@+id/foodCheckBox"
        android:checked="false"
        android:layout_below="@+id/textView6"
        android:layout_alignRight="@+id/locationList"
        android:layout_alignEnd="@+id/locationList" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/technology"
        android:id="@+id/technologyCheckBox"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:layout_below="@+id/foodCheckBox"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings" android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/languageSpinner"
        android:layout_below="@+id/connectButton"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/notifications"
        android:layout_below="@+id/languageSpinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/connect"
        android:id="@+id/textView5"
        android:layout_alignTop="@+id/connectButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/changelang"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/languageSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/notifications"
        android:id="@+id/textView13"
        android:layout_below="@+id/languageSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
