<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.school.ecallowa.nyobora.mainscreens.Person">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.school.ecallowa.nyobora.fragments.MenuFragment"
        android:id="@+id/fragment"
        tools:layout="@layout/fragment_menu"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forum"
        android:id="@+id/forumButton"
        android:onClick="getForumPage"
        android:layout_below="@+id/fragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peopleArea"
        android:id="@+id/peopleAreaButton"
        android:layout_marginTop="53dp"
        android:onClick="getPeopleAroundPage"
        android:layout_below="@+id/forumButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/profileButton"
        android:layout_marginBottom="38dp"
        android:layout_alignParentBottom="true"
        android:onClick="getProfilePage"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/peo"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/forumButton"
        android:layout_alignStart="@+id/forumButton" />
</RelativeLayout>
