<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.school.ecallowa.nyobora.person.Profile">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/profileImg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:id="@+id/uploadButton"
        android:layout_below="@+id/profileImg"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/profileName"
        android:layout_below="@+id/uploadButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/ageProfile"
        android:inputType="number"
        android:paddingTop="5dp"
        android:layout_alignLeft="@+id/profileName"
        android:layout_alignStart="@+id/profileName"
        android:layout_below="@+id/textView14"
        android:layout_alignRight="@+id/profileName"
        android:layout_alignEnd="@+id/profileName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ageField"
        android:id="@+id/textView14"
        android:layout_below="@+id/profileName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/descriptionField"
        android:id="@+id/textView15"
        android:layout_above="@+id/saveButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nameInput"
        android:id="@+id/textView18"
        android:layout_alignTop="@+id/profileName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:maxLength="140"
        android:id="@+id/descriptionProfile"
        android:layout_alignLeft="@+id/ageProfile"
        android:layout_alignStart="@+id/ageProfile"
        android:layout_above="@+id/saveButton"
        android:layout_below="@+id/ageProfile" />
</RelativeLayout>
